[gd_scene load_steps=40 format=2]

[ext_resource path="res://Entities/player/Walk (3).png" type="Texture" id=1]
[ext_resource path="res://Entities/player/Walk (5).png" type="Texture" id=2]
[ext_resource path="res://Entities/player/Walk (6).png" type="Texture" id=3]
[ext_resource path="res://player.gd" type="Script" id=4]
[ext_resource path="res://Entities/player/Idle (4).png" type="Texture" id=5]
[ext_resource path="res://Entities/sounds/Jump.wav" type="AudioStream" id=6]
[ext_resource path="res://Entities/player/Idle (6).png" type="Texture" id=7]
[ext_resource path="res://Entities/player/Jump (12).png" type="Texture" id=8]
[ext_resource path="res://Entities/player/Jump (8).png" type="Texture" id=9]
[ext_resource path="res://Entities/player/Jump (1).png" type="Texture" id=10]
[ext_resource path="res://Entities/player/Walk (2).png" type="Texture" id=11]
[ext_resource path="res://Entities/player/Idle (3).png" type="Texture" id=12]
[ext_resource path="res://Entities/player/Idle (2).png" type="Texture" id=13]
[ext_resource path="res://Entities/player/Walk (1).png" type="Texture" id=14]
[ext_resource path="res://Entities/player/Idle (10).png" type="Texture" id=15]
[ext_resource path="res://Entities/player/Idle (9).png" type="Texture" id=16]
[ext_resource path="res://Entities/player/Idle (8).png" type="Texture" id=17]
[ext_resource path="res://Entities/player/Idle (5).png" type="Texture" id=18]
[ext_resource path="res://Entities/player/Walk (7).png" type="Texture" id=19]
[ext_resource path="res://Entities/player/Jump (4).png" type="Texture" id=20]
[ext_resource path="res://Entities/player/Jump (6).png" type="Texture" id=21]
[ext_resource path="res://Entities/player/Idle (7).png" type="Texture" id=22]
[ext_resource path="res://Entities/player/Idle (1).png" type="Texture" id=23]
[ext_resource path="res://Entities/bg/BG.png" type="Texture" id=24]
[ext_resource path="res://Entities/sounds/Fall.wav" type="AudioStream" id=25]
[ext_resource path="res://Entities/sounds/Walk.wav" type="AudioStream" id=26]
[ext_resource path="res://Entities/player/Jump (2).png" type="Texture" id=27]
[ext_resource path="res://Entities/player/Walk (4).png" type="Texture" id=28]
[ext_resource path="res://Entities/player/Jump (10).png" type="Texture" id=29]
[ext_resource path="res://Entities/player/Walk (10).png" type="Texture" id=30]
[ext_resource path="res://Entities/player/Jump (11).png" type="Texture" id=31]
[ext_resource path="res://Entities/player/Jump (3).png" type="Texture" id=32]
[ext_resource path="res://Entities/player/Jump (9).png" type="Texture" id=33]
[ext_resource path="res://Entities/player/Jump (5).png" type="Texture" id=34]
[ext_resource path="res://Entities/player/Jump (7).png" type="Texture" id=35]
[ext_resource path="res://Entities/player/Walk (8).png" type="Texture" id=36]
[ext_resource path="res://Entities/player/Walk (9).png" type="Texture" id=37]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 18 ), ExtResource( 7 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 20 ), ExtResource( 34 ), ExtResource( 21 ), ExtResource( 35 ), ExtResource( 9 ), ExtResource( 33 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": false,
"name": "Jump",
"speed": 25.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 11 ), ExtResource( 1 ), ExtResource( 28 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 19 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 30 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 28.0
height = 37.0

[node name="player" type="KinematicBody2D"]
position = Vector2( 320, 553 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 4 )
animation = "Fall"
speed_scale = 2.0
offset = Vector2( 120, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_bottom = 760

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.419608, 0.905882, 1, 1 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 24 )

[node name="walk_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )

[node name="jump_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="fall_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )
